# payme

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build  start-redis.sh  start-weasyprint.sh  watch.sh
scripts/: fetch-rust.sh  run  start-redis.sh  watch.sh
src/: main.rs
src/payme/config/: mod.rs
src/payme/crypto/: mod.rs
src/payme/email/: mod.rs
src/payme/handler/: mod.rs
src/payme/invoice/: mod.rs
src/payme/json/: mod.rs
src/payme/pdf/: mod.rs
src/payme/redis/: mod.rs
src/payme/router/: mod.rs
web-app/: .gitignore  README.md  project.clj
web-app/resources/public/: index.html  package-lock.json
web-app/resources/public/markdown/: confirm.md  confirm_copy.md  invoice.md  invoice_copy.md  invoice_diag.md  receipt.md  receipt_copy.md  receipt_diag.md  test.md
web-app/resources/public/scss/: invoice.scss  style.scss
web-app/resources/public/templates/: email.html  invoice.html  test.html
web-app/src/payme/: core.cljs
