[package]
name = "payme"
version = "0.1.0"
authors = ["Edward Knyshov <edvorg@gmail.com>"]

[dependencies]
mount = "0.4"
iron = "0.6"
mime = "0.2"
router = "0.6"
urlencoded = "0.5"
staticfile = "0.5"
markdown = "0.2"
tera = "0.11"
lazy_static = "1.0"
persistent = "0.4"
serde = "1.0"
serde_json = "1.0"
plugin = "0.2"
serde_derive = "1.0"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
